--- a/examples/combobox/aria1.1pattern/grid-combo.html
+++ b/examples/combobox/aria1.1pattern/grid-combo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Example of ARIA 1.1 Combobox with Grid Popup | WAI-ARIA Authoring Practices 1.1</title>
+<title>ARIA 1.1 Combobox with Grid Popup Example | WAI-ARIA Authoring Practices 1.1</title>
 
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
 <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
@@ -19,20 +19,22 @@
 </head>
 <body>
   <main>
-  <h1>Example of ARIA 1.1 Combobox with Grid Popup</h1>
+  <h1>ARIA 1.1 Combobox with Grid Popup Example</h1>
   <p>
-    <strong>NOTE:</strong> This page is work in progress; it is not ready for review.
-    This work is tracked by <a href="https://github.com/w3c/aria-practices/issues/100">issue 100</a>.
+    <strong>NOTE:</strong> Please provide feedback on this example in 
+    This work is tracked by <a href="https://github.com/w3c/aria-practices/issues/500">issue 500</a>.
   </p>
   <p>
-    The following example demonstrates an implementation of the 
+    The following example combobox implements the 
     <a href="../../../#combobox">combobox design pattern</a>
-    that uses the option to popup a grid containing suggested values.
+    using a grid for the suggested values popup.
+    In this example, users can choose a fruit or vegetable.
+     Each row of the two-column grid represents one suggestion; column one contains the name of the fruit or vegetable and column two identifies whether it is a fruit or vegetable.
   </p>
   <p>Similar examples include: </p>
   <ul>
-    <li><a href="#">example name</a>: summarize what this related example demonstrates.</li>
-    <!--  list other examples that implement the same design pattern. -->
+    <li><a href="listbox-combo.html">Examples of ARIA 1.1 Combobox with Listbox Popup</a>: Comboboxes that demonstrate the various forms of autocomplete behavior using a listbox popup.</li>
+    <li><a href="../aria1.0pattern/combobox-autocomplete-list.html">ARIA 1.0 Combobox with List Autocomplete</a></li>
   </ul>
 
   <section>
@@ -51,7 +53,6 @@
           <input type="text"
             aria-autocomplete="list"
             aria-controls="ex1-grid"
-            aria-activedescendant=""
             aria-labelledby="ex1-label"
             id="ex1-input">
         </div>
@@ -66,32 +67,16 @@
     </div>
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
   </section>
-
-  <section>
-    <h2>Accessibility Features</h2>
-    <p class="annotate">Optional section: If appropriate, please replace this content with a list of any special or noteworthy accessibility features
-      demonstrated in this implementation, such as:</p>
-    <ol>
-      <li>What distinguishes this example from related examples.</li>
-      <li>Keyboard chortcuts, live regions,  unusual event handling, or other ancillary best practices that are employed.</li>
-      <li>Do not include information that would be repeated in the following keyboard and attribute sections.</li>
-      <li>Delete this section if not needed.</li>
-    </ol>
-  </section>
-
+  
   <section>
     <h2 id="kbd_label">Keyboard Support</h2>
-    <!--
-      List the keys supported in this example.
-      Remember to:
-      Use kbd tags,e.g. <kbd>KeyName</kbd>.
-      Key names use first-letter caps, e.g., <kbd>Enter</kbd>.
-      Single space between multiple Words, e.g., <kbd>Up Arrow</kbd>.
-      Use + to separate modifiers, e.g., <kbd>Control + Right Arrow</kbd>.
-      One key per row, e.g., do not combine <kbd>Up Arrow</kbd> and <kbd>Down Arrow</kbd> into a single row.
-      Do not use the word "key", e.g., do not write <kbd>Enter Key</kbd> or <kbd>Enter</kbd> key.
-     -->
-    <table aria-labelledby="kbd_label" class="def">
+    <p>
+    The example combobox on this page implements the following keyboard interface. 
+      Other variations and options for the keyboard interface are described in the  
+      <a href="../../../#combobox_kbd_interaction">Keyboard Interaction section of the combobox design pattern.</a>
+    </p>
+    <h3 id="kbd_label_textbox">Textbox</h3>
+    <table aria-labelledby="kbd_label_textbox kbd_label" class="def">
       <thead>
         <tr>
           <th>Key</th>
@@ -100,32 +85,132 @@
       </thead>
       <tbody>
         <tr>
-          <th><kbd>KeyName</kbd></th>
+          <th><kbd>Down Arrow</kbd></th>
+          <td>If the grid is displayed, moves focus to the first suggested value.</td>
+        </tr>
+        <tr>
+          <th><kbd>Up Arrow</kbd></th>
+          <td>If the grid is displayed, moves focus to the last suggested value.</td>
+        </tr>
+        <tr>
+          <th><kbd>Escape</kbd></th>
           <td>
-            Description of key function.
-            <!--  Do not use a list if there is only one function for the key.  -->
+            <ul>
+              <li>Clears the textbox</li>
+              <li>If the grid is displayed, closes it.</li>
+            </ul>
           </td>
         </tr>
         <tr>
-          <th><kbd>KeyName</kbd></th>
+          <th><li>Standard single line text editing keys</th>
           <td>
             <ul>
-              <li>If condition 1, performs function 1.</li>
-              <li>If condition 2, performs function 2.</li>
-              <li>Only use a list if multiple statements are needed.</li>
+              <li>Keys used for cursor movement and text manipulation, such as <kbd>Delete</kbd> and <kbd>Shift + Right Arrow</kbd>.</li>
+              <li>An HTML <code>input</code> with <code>type=<q>text</q></code> is used for the textbox so the browser will provide platform-specific editing keys.</li>
+            </ul>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <h3 id="kbd_label_popup">Grid Popup</h3>
+    <table aria-labelledby="kbd_label_popup kbd_label" class="def">
+      <thead>
+        <tr>
+          <th>Key</th>
+          <th>Function</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th><kbd>Enter</kbd></th>
+          <td>
+            <ul>
+              <li>Sets the textbox value to the content of the first cell in the row containing focus.</li>
+              <li>Closes the grid popup.</li>
+              <li>Sets focus on the textbox.</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <th><kbd>Escape</kbd></th>
+          <td>
+            <ul>
+              <li>Closes the grid popup.</li>
+              <li>Sets focus on the textbox.</li>
+              <li>Clears the textbox.</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <th><kbd>Down Arrow</kbd></th>
+          <td>
+            <ul>
+              <li>Moves focus to the next row.</li>
+              <li>If focus is in the last row, moves focus to the first row.</li>
+              <li>Note: This wrapping behavior is useful when <kbd>Home</kbd> and <kbd>End</kbd> move the editing cursor as described below.</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <th><kbd>Up Arrow</kbd></th>
+          <td>
+            <ul>
+              <li>Moves focus to the previous row.</li>
+              <li>If focus is in the first row, moves focus to the last row.</li>
+              <li>Note: This wrapping behavior is useful when <kbd>Home</kbd> and <kbd>End</kbd> move the editing cursor as described below.</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <th><kbd>Right Arrow</kbd></th>
+          <td>
+            <ul>
+              <li>Moves focus to the next cell.</li>
+              <li>If focus is in the last cell in a row, moves focus to the first cell in the next row.</li>
+              <li>If focus is in the last cell in the last row, moves focus to the first cell in the first row.</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <th><kbd>Left Arrow</kbd></th>
+          <td>
+            <ul>
+              <li>Moves focus to the previous cell.</li>
+              <li>If focus is in the first cell in a row, moves focus to the last cell in the previous row.</li>
+              <li>If focus is in the first cell in the first row, moves focus to the last cell in the last row.</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <th><kbd>Home</kbd></th>
+          <td>Moves focus to the textbox and places the editing cursor at the beginning of the field.</td>
+        </tr>
+        <tr>
+          <th><kbd>End</kbd></th>
+          <td>Moves focus to the textbox and places the editing cursor at the end of the field.</td>
+        </tr>
+        <tr>
+          <th>Printable Characters</th>
+          <td>
+            <ul>
+              <li>Moves focus to the textbox.</li>
+              <li>Types the character in the textbox.</li>
             </ul>
           </td>
         </tr>
       </tbody>
     </table>
   </section>
-
+  
   <section>
-    <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
-    <!--
-      Update this table to describe how roles, properties, states, and tabindex are used in this example.
-    -->
-    <table aria-labelledby="rps_label" class="data attributes">
+    <h2 id="rps_label">Role, Property, State, and Tabindex Attributes</h2>
+    <p>
+      The example comboboxes on this page implement the following ARIA roles, states, and properties. 
+      Information about other ways of applying ARIA roles, states, and properties is available in the    
+      <a href="../../../#combobox_roles_states_props">Roles, States, and Properties section of the combobox design pattern.</a>
+    </p>
+    <h3 id="rps_label_combobox">Combobox Container</h3>
+    <table aria-labelledby="rps_label_combobox rps_label" class="data attributes">
       <thead>
         <tr>
           <th scope="col">Role</th>
@@ -136,45 +221,178 @@
       </thead>
       <tbody>
         <tr>
-          <th scope="row"><code>RoleName</code></th>
-          <td><!--  Leave this cell blank in rows where a role is being described. --></td>
-          <td><code>HTML_ELEMENT</code></td>
+          <th scope="row">
+            <code>combobox</code>
+          </th>
+          <td></td>
+          <td><code>div</</code></td>
           <td>
-            Describe usage/purpose, e.g., indicates the focusable element that serves as the ...
+            <ul>
+              <li>Identifies the element as a combobox.</li>
+              <li>Note: The primary difference between the ARIA 1.0 pattern and the ARIA 1.1 pattern is the placement of the <code>combobox</code> role.</li>
+            </ul>
           </td>
         </tr>
         <tr>
-          <td>
-            <!--  Leave this cell blank in rows that describe attributes applied to the element with the previously described role.
-              Make a row like this for each attribute/value pair.
-          -->
-          </td>
-          <th scope="row"><code>AttributeName=<q>AttributeValue</q></code></th>
-          <td><code>HTML_ELEMENT</code></td>
+          <td></td>
+          <th scope="row">
+            <code>aria-haspopup=<q>grid</q></code>
+          </th>
+          <td><code>div</code></td>
+          <td>Indicates that the combobox can popup a <code>grid</code> to suggest values.</td>
+        </tr>
+        <tr>
+          <td></td>
+          <th scope="row">
+            <code>aria-owns=<q>IDREF</q></code>
+          </th>
+          <td><code>div</code></td>
+          <td>Identifies the element that serves as the grid popup.</td>
+        </tr>
+        <tr>
+          <td></td>
+          <th scope="row">
+            <code>aria-expanded=<q>false</q></code>
+          </th>
+          <td><code>div</code></td>
+          <td>Indicates that the popup element <strong>is not</strong> displayed.</td>
+        </tr>
+        <tr>
+          <td></td>
+          <th scope="row">
+            <code>aria-expanded=<q>true</q></code>
+          </th>
+          <td><code>div</code></td>
+          <td>Indicates that the popup element <strong>is</strong> displayed.</td>
+        </tr>
+      </tbody>
+    </table>
+    <h3 id="rps_label_textbox">Textbox</h3>
+    <table aria-labelledby="rps_label_textbox rps_label" class="data attributes">
+      <thead>
+        <tr>
+          <th scope="col">Role</th>
+          <th scope="col">Attribute</th>
+          <th scope="col">Element</th>
+          <th scope="col">Usage</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td></td>
+          <th scope="row">
+            <code>aria-labelledby=<q>IDREF</q></code>
+          </th>
+          <td><code>input[type="text"]</code></td>
+          <td>Provides a label for the textbox element of the combobox.</td>
+        </tr>
+        <tr>
+          <td></td>
+          <th scope="row">
+            <code>aria-autocomplete=<q>list</q></code>
+          </th>
+          <td><code>input[type="text"]</code></td>
+          <td>Indicates that the autocomplete behavior of the text input is to suggest a list of possible values in a popup.</td>
+        </tr>
+        <tr>
+          <td></td>
+          <th scope="row">
+            <code>aria-controls=<q>IDREF</q></code>
+          </th>
+          <td><code>input[type="text"]</code></td>
           <td>
             <ul>
-              <li>explanation of usage, purpose, benefit, and/or guidance relevant to this implementation.</li>
-              <li>If making multiple statements, use list for brevity and clarity</li>
-              <li>Do not make a single item list.</li>
+              <li>Identifies the popup element that lists suggested values.</li>
+              <li>Note: In the ARIA 1.0 combobox pattern, the textbox uses <code>aria-owns</code> instead of <code>aria-controls</code>.</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <td></td>
+          <th scope="row">
+            <code>aria-activedescendant=<q>IDREF</q></code>
+          </th>
+          <td><code>input[type="text"]</code></td>
+          <td>
+            <ul>
+              <li>When a cell in the grid is visually indicated as having keyboard focus, refers to that cell.</li>
+              <li>When navigation keys, such as <kbd>Down Arrow</kbd>, are pressed, the JavaScript changes the value.</li>
+              <li>Enables assistive technologies to know which element the application regards as focused while DOM focus remains on the <code>input</code> element.</li>
+              <li>
+                For more information about this focus management technique, see 
+                <a href="../../../#kbd_focus_activedescendant">Using aria-activedescendant to Manage Focus.</a>
+              </li>
             </ul>
           </td>
         </tr>
       </tbody>
     </table>
+    <h3 id="rps_label_popup">Grid Popup</h3>
+    <table aria-labelledby="rps_label_listbox rps_label" class="data attributes">
+      <thead>
+        <tr>
+          <th scope="col">Role</th>
+          <th scope="col">Attribute</th>
+          <th scope="col">Element</th>
+          <th scope="col">Usage</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">
+            <code>grid</code>
+          </th>
+          <td></td>
+          <td>
+            <code>div</code>
+          </td>
+          <td>Identifies the element as a <code>grid</code>.</td>
+        </tr>
+        <tr>
+          <td></td>
+          <th scope="row">
+            <code>aria-labelledby=<q>IDREF</q></code>
+          </th>
+          <td><code>div</code></td>
+          <td>Provides a label for the <code>grid</code> element of the combobox.</td>
+        </tr>
+        <tr>
+          <th scope="row">
+            <code>row</code>
+          </th>
+          <td></td>
+          <td><code>div</code></td>
+          <td>Identifies the element containing all the cells for a row.</td>
+        </tr>
+        <tr>
+          <td></td>
+          <th scope="row">
+            <code>aria-selected=<q>true</q></code>
+          </th>
+          <td><code>div</code></td>
+          <td>
+            <ul>
+              <li>Specified on a row in the grid when it is visually indicated as selected.</li>
+              <li>Occurs only when a cell in the grid is referenced by <code>aria-activedescendant</code>.</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row"><code>gridcell</code></th>
+          <td></td>
+          <td><code>div</code></td>
+          <td>Identifies the element containing the content for a single cell.</td>
+        </tr>
+      </tbody>
+    </table>
   </section>
-
+  
   <section>
     <h2>Javascript and CSS Source Code</h2>
-    <!--  After the js and css files are named with the name of this example, change the href and text of the following 2 links to refer to the appropriate js and css files.  -->
     <ul>
-      <li>
-        CSS:
-        <a href="css/example_name.css" type="tex/css">example_name.css</a>
-      </li>
-      <li>
-        Javascript:
-        <a href="js/example_name.js" type="text/javascript">example_name.js</a>
-      </li>
+      <li> CSS: <a href="css/combobox-1.1.css" type="tex/css">combobox-1.1.css</a></li>
+      <li>Javascript: <a href="js/grid-combobox.js" type="text/javascript">grid-combobox.js</a></li>
+      <li>Javascript: <a href="js/grid-combo-example.js" type="text/javascript">grid-combo-example.js</a></li>
     </ul>
   </section>
 
@@ -195,8 +413,6 @@
   </section>
   </main>
   <nav>
-    <!--  Update the pattern_ID parameter of this link to refer to the APG design pattern section related to this example.  -->
-    <a href="../../#pattern_ID">EXAMPLE_NAME Design Pattern </a>
     <a href="../../../#combobox">Combobox Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
   </nav>
 </body>
