ARIA 1.1 Combobox with Listbox Popup example page: fix typo
For issue #496,
In examples/combobox/aria1.1pattern/listbox-combo.html,
change "the" to "The" as pointed out by @annabbott.

--- a/examples/combobox/aria1.1pattern/listbox-combo.html
+++ b/examples/combobox/aria1.1pattern/listbox-combo.html
@@ -32,7 +32,7 @@
   </p>
   <p>
     In these examples, users can specify the name of a fruit or vegetable by either typing a value in the box or choosing from the list.
-    the list becomes available after the textbox contains a character that matches the beginning of the name of one of the items in the list of suggested values.
+    The list becomes available after the textbox contains a character that matches the beginning of the name of one of the items in the list of suggested values.
     Users may type any value in the textbox; this implementation does not limit input to values that are in the list of suggested values.
   </p>
   <p>Similar examples include: </p>
