ARIA 1.1 Combobox with Grid Popup Example: Revise Introduction
For issue #100, modified examples/combobox/aria1.1pattern/grid-combo.html.
Added language to improved the description of the example.

--- a/examples/combobox/aria1.1pattern/grid-combo.html
+++ b/examples/combobox/aria1.1pattern/grid-combo.html
@@ -22,14 +22,21 @@
   <h1>ARIA 1.1 Combobox with Grid Popup Example</h1>
   <p>
     <strong>NOTE:</strong> Please provide feedback on this example in 
-    This work is tracked by <a href="https://github.com/w3c/aria-practices/issues/500">issue 500</a>.
+    <a href="https://github.com/w3c/aria-practices/issues/500">issue 500.</a>
   </p>
   <p>
     The following example combobox implements the 
     <a href="../../../#combobox">combobox design pattern</a>
     using a grid for the suggested values popup.
-    In this example, users can choose a fruit or vegetable.
-     Each row of the two-column grid represents one suggestion; column one contains the name of the fruit or vegetable and column two identifies whether it is a fruit or vegetable.
+  </p>
+  <p>
+    In this example, users can specify the name of a fruit or vegetable by either typing a value in the box or choosing from the set of values presented in a grid popup.
+    The popup becomes available after the textbox contains a character that matches the beginning of the name of one of the items in the set of value suggestions.
+    Users may type any value in the textbox; this implementation does not limit input to values that are in the set of value suggestions.
+  </p>
+  <p>
+    The grid that presents suggested values has two columns.
+    Each row of the grid represents one suggestion; column one contains the name of the fruit or vegetable and column two identifies whether it is a fruit or vegetable.
   </p>
   <p>Similar examples include: </p>
   <ul>
