Add type=button to accordion triggers

--- a/examples/accordion/accordion.html
+++ b/examples/accordion/accordion.html
@@ -53,7 +53,7 @@
         <dl id="accordionGroup" role="presentation" class="Accordion">
           <dt role="heading" aria-level="3">
             <button aria-expanded="true" class="Accordion-trigger"
-              aria-controls="sect1" id="accordion1id"
+              aria-controls="sect1" id="accordion1id" type="button"
             >
               <span class="Accordion-title">Personal Information</span><span class="Accordion-icon"></span>
             </button>
@@ -95,14 +95,14 @@
           </dd>
           <dt role="heading" aria-level="3">
             <button aria-expanded="false" class="Accordion-trigger"
-              aria-controls="sect2" id="accordion2id"
+              aria-controls="sect2" id="accordion2id" type="button"
             >
               <span class="Accordion-title">Billing Address</span><span class="Accordion-icon"></span>
             </button>
           </dt>
           <dd id="sect2" role="region" aria-labelledby="accordion2id" class="Accordion-panel" hidden>
             <div>
-              <fieldset class="billing flex">
+              <fieldset>
                 <p>
                   <label for="b-add1">Address 1:</label>
                   <input type="text" name="b-add1" id="b-add1" />
@@ -128,7 +128,7 @@
           </dd>
           <dt role="heading" aria-level="3">
             <button aria-expanded="false" class="Accordion-trigger"
-              aria-controls="sect3" id="accordion3id"
+              aria-controls="sect3" id="accordion3id" type="button"
             >
               <span class="Accordion-title">Shipping Address</span><span class="Accordion-icon"></span>
             </button>
